manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: cjdockerhelloworldspringboot 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cjdockerhelloworldspringboot 
    spec:
      containers:
        - name: cjdockerhelloworldspringboot 
          image: chandradevregistry.azurecr.io/cjdockerhelloworldspringboot
          ports:
          - containerPort: 8081
