manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: cjdockerhelloworldspringboot
spec:
    type: LoadBalancer
    ports:
    - port: 8081 
    selector:
        app: cjdockerhelloworldspringboot
